fix z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -73,6 +73,7 @@ $bigSize:300px;
     height: 100%;
     top: 0;
     left: 0;
+    z-index: 1;
 }
 .clickRight{
     width: 100%;
@@ -80,6 +81,7 @@ $bigSize:300px;
     height: 100%;
     top: 0;
     left: 0;
+    z-index: 1;
 }
 
 #hidden1{
